@@ -7,8 +7,8 @@
   <identifier value="org.puimula.ooovoikko" />
 
   <display-name>
-    <name lang="en-US">Voikko - Finnish spellchecking and hyphenation</name>
-    <name lang="fi">Voikko - suomen oikoluku ja tavutus</name>
+    <name lang="en-US">Voikko - Finnish language tools</name>
+    <name lang="fi">Voikko - suomen kielen kielityökalut</name>
   </display-name>
 
   <!-- SHOW_LICENSE
