@@ -14,7 +14,7 @@ packages which should have been made available to you by the
 distributor of this program.
 
 This program as a whole may be freely used, and it may be distributed
-under the GNU General Public License, version 3 (see below).
+under the GNU General Public License, version 3 or later (see below).
 
 
 
