@@ -13,7 +13,8 @@ lähdekoodipaketeista, jotka tämän ohjelman levittäjän on kuulunut
 laittaa saatavillesi.
 
 Tätä ohjelmaa saa kokonaisuudessaan käyttää vapaasti, ja sitä saa levittää
-edelleen "GNU General Public License"-lisenssin version 3 ehdoilla (ks. alla).
+edelleen "GNU General Public License"-lisenssin version 3 tai myöhempien
+ehdoilla (ks. alla).
 
 
 
