@@ -1,3 +1,8 @@
+2008-03-30 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Add stub for grammar checker implementation.
+	* Documentation fixes.
+
 2008-03-24 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Respect HyphMinLeading and HyphMinTrailing in
